# Omni-Formatter

./: .antigravityrules  .gitattributes  .gitignore  ADD_LANGUAGE.md  CHANGELOG.md  Cargo.toml  DEVELOPERS.md  FINAL_REPORT.md  FLAWS.md  ISIL_Financial_Data.txt  Language-List.txt  README.md  SECURITY.md  achievement.txt  build-temp.sh  index.html  smoke_output.txt  style.css
.cargo/: config.toml
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml  language_request.md
.github/workflows/: ci.yml  compat-check.yml  publish.yml  release.yml
.wrangler/cache/: wrangler-account.json
cli/: Cargo.toml  README.md
cli/src/: main.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: arena.rs  comments.rs  debug.rs  incremental.rs  lib.rs  memory.rs  range.rs  registry.rs  stitch.rs  unicode.rs  wasm_c_stubs.c  wasm_stdlib.rs  zones.rs
crates/lang-c/: Cargo.toml  schema.json
crates/lang-c/src/: adapter.rs  format.rs  lib.rs  plugin.rs
crates/lang-csharp/: Cargo.toml  schema.json
crates/lang-csharp/src/: adapter.rs  format.rs  lib.rs  plugin.rs
crates/lang-css/: Cargo.toml  schema.json
crates/lang-css/src/: adapter.rs  format.rs  lib.rs  plugin.rs
crates/lang-data/: Cargo.toml  schema.json
crates/lang-data/src/: adapter.rs  format.rs  lib.rs  plugin.rs
crates/lang-devops/: Cargo.toml  schema.json
crates/lang-devops/src/: adapter.rs  format.rs  lib.rs  plugin.rs
crates/lang-functional/: Cargo.toml  schema.json
crates/lang-functional/src/: adapter.rs  format.rs  lib.rs  plugin.rs
crates/lang-go/: Cargo.toml  schema.json
crates/lang-go/src/: adapter.rs  format.rs  lib.rs  plugin.rs
crates/lang-java/: Cargo.toml  schema.json
crates/lang-java/src/: adapter.rs  format.rs  lib.rs  plugin.rs
crates/lang-js/: Cargo.toml  schema.json
crates/lang-js/src/: adapter.rs  compat.rs  format.rs  lib.rs  plugin.rs
crates/lang-markdown/: Cargo.toml  schema.json
crates/lang-markdown/src/: adapter.rs  format.rs  lib.rs  plugin.rs
crates/lang-mobile/: Cargo.toml  schema.json
crates/lang-mobile/src/: adapter.rs  format.rs  lib.rs  (+1 more)
crates/lang-modern/: Cargo.toml  schema.json
crates/lang-modern/src/: adapter.rs  format.rs  lib.rs  plugin.rs
crates/lang-other/: Cargo.toml  schema.json
crates/lang-python/: Cargo.toml  schema.json
crates/lang-python/src/: adapter.rs  format.rs  lib.rs  plugin.rs
crates/lang-ruby/: Cargo.toml  schema.json
crates/lang-ruby/src/: adapter.rs  format.rs  lib.rs  plugin.rs
crates/lang-rust/: Cargo.toml  schema.json
crates/lang-rust/src/: adapter.rs  format.rs  lib.rs  plugin.rs
crates/lang-sass/: Cargo.toml  schema.json
crates/lang-shell/: Cargo.toml  schema.json
crates/lang-shell/src/: adapter.rs  format.rs  lib.rs  plugin.rs
crates/lang-sql/: Cargo.toml  schema.json
crates/lang-swift/: Cargo.toml  schema.json
crates/lang-template/: Cargo.toml  schema.json
crates/lang-template/src/: adapter.rs  format.rs  lib.rs  plugin.rs
crates/protocol/: Cargo.toml
docs/: ADD_LANGUAGE_TEMPLATE.md  ARCHITECTURE.md  CONTEXT_PACK.md  DECISIONS.md  FLAWS.md  ONBOARDING.md  STATUS.md  omnifmt.example.json
extension/: .vscodeignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
extension/src/: chain.ts  configAdapter.ts  conflictDetector.ts  editorConfig.ts  extension.ts  formattingState.ts  logger.ts  moduleLoader.ts  offsets.ts  onType.ts  statusBar.ts  wasmCompiler.ts  workerPool.ts
extension/workers/: formatWorker.ts
registry/: README.md  package-lock.json  package.json  schema.sql  wrangler.toml
registry/src/: index.ts
resolve/: core.json
rules/: markdown-rules.txt
scratch/: patch.py  test_js_for.js
scripts/: build-wasm.sh  generate_fixtures.js  generate_lib_files.ps1  publish-extension.cs  publish-extension.ps1  run-compat-check.sh  scaffold_crates.ps1  wire_plugins.js
temp/: ci_log.txt  convert_md_to_pdf.py  null  scaffold_workspace.py  smoke_output.txt  update_scaffold.py
tests/: FINAL_REPORT.md  dump_tree.rs  fmt-suite-results.txt  fmt-suite-results10.txt  fmt-suite-results11.txt  fmt-suite-results12.txt  fmt-suite-results2.txt  fmt-suite-results3.txt  fmt-suite-results4.txt  fmt-suite-results5.txt  fmt-suite-results6.txt  fmt-suite-results7.txt  fmt-suite-results8.txt  fmt-suite-results9.txt  perf_profile.md  run_tests.sh
tests/css_debug/: Cargo.toml
tests/fixtures/: 1.py  Dockerfile  Makefile  messy.adoc  messy.ahk  messy.asciidoc  messy.asm  messy.astro  messy.au3  messy.awk  messy.bash  messy.c  messy.cbl  messy.cc  messy.cjs  messy.clj  messy.cljs  messy.cob  messy.cpp  messy.cs  messy.css  messy.csv  messy.cts  messy.cxx  messy.d  messy.dart  messy.ejs  messy.erl  messy.ex  messy.exs  messy.f90  messy.f95  messy.fish  messy.fs  messy.fsi  messy.fsx  messy.gd  messy.go  messy.gql  messy.graphql  (+74 more)
tests/fmt-suite/: Cargo.toml
tests/fmt-suite/src/: main.rs
tests/formatter-test-suite/: test.ahk.original  test.asm.original  test.c.original  test.clj.original  test.cpp.original  test.cs.original  test.cu.original  test.d  test.dockerfile  test.ejs  test.erl  test.ex.original  test.fs  test.gd  test.go  test.graphql  test.groovy.original  test.hbs  test.hs  test.html.original  test.ini  test.json  test.kt.original  test.less  test.liquid  test.lisp  test.lua  test.m  test.makefile  test.ml.original  test.nim.original  test.php.original  test.ps1  test.r.original  test.rs  test.sass.original  test.scala  test.scss  test.sh  test.sql  (+11 more)
tests/idempotency/: js_idempotency.rs
tests/native_runner/: Cargo.toml
tests/native_runner/src/: main.rs
tests/node/: test-core.js
tests/professional_workspace/: .omnifmt.json  PROFESSIONAL_TEST_REPORT.md  extension.test.js  generate_large_file.js  index.js  package-lock.json  package.json  runTests.js  scratch.js
tests/scss_dump/: Cargo.toml
tests/scss_dump/src/: main.rs
tests/tmp_debug/: Cargo.toml
tests/wasm_integration/: smoke_test.js  test_all_languages.js  wasm_report.md
website/: index.html  style.css
(+102 files in other folders)
