[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/core",
    "crates/lang-js",
    "crates/lang-python",
    "crates/lang-rust",
    "crates/lang-go",
    "crates/lang-css",
    "cli",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["Abdu1-Ahd"]
repository  = "https://github.com/Abdu1-Ahd/Omni-Formatter"

[workspace.dependencies]
# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# WASM bindings
wasm-bindgen = "0.2"

# Arena allocator (L-01 mitigation)
bumpalo     = { version = "3", features = ["collections"] }

# Unicode display-width (L-14 mitigation)
unicode-width = "0.1"

# Tree-sitter parsing infrastructure
tree-sitter = "0.22"

# Language grammars (vendored C bindings — wasm32 compatible via emscripten)
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python     = "0.21"
tree-sitter-rust       = "0.21"
tree-sitter-go         = "0.21"
tree-sitter-css        = "0.21"
tree-sitter-html       = "0.20"

# Logging
log         = "0.4"

[profile.release]
# Optimize for size — critical for WASM binary targets
opt-level   = "s"
lto         = true
codegen-units = 1
panic       = "abort"

[profile.dev]
# Faster incremental builds during development
opt-level   = 0
debug       = true
