[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/core",
    "crates/lang-js",
    "crates/lang-python",
    "crates/lang-rust",
    "crates/lang-go",
    "crates/lang-css",
    # ── New language modules (v0.2.0) ───────────────────────────────────────
    "crates/lang-c",
    "crates/lang-java",
    "crates/lang-csharp",
    "crates/lang-data",
    "crates/lang-shell",
    "crates/lang-markdown",
    "crates/lang-sql",
    "crates/lang-ruby",
    "crates/lang-swift",
    "crates/lang-mobile",
    "crates/lang-devops",
    "crates/lang-functional",
    "crates/lang-modern",
    "crates/lang-other",
    "crates/lang-template",
    "crates/lang-sass",
    "cli", "tests/native_runner", "tests/scss_dump","tests/fmt-suite",
]

# ── Vendor patches ────────────────────────────────────────────────────────────
# tree-sitter 0.22.6 calls dup() in ts_tree_print_dot_graph() (a debug-only
# function). That syscall doesn't exist in wasm32-unknown-unknown. The vendored
# copy stubs _ts_dup() to return -1 so the WASM build compiles cleanly.
# This only affects the debug-graph feature — formatting is unaffected.
[patch.crates-io]
tree-sitter = { path = "vendor/tree-sitter-0.22.6" }

[workspace.package]
version     = "0.2.1"
edition     = "2021"
license     = "MIT"
authors     = ["Abdu1-Ahd"]
repository  = "https://github.com/Abdu1-Ahd/Omni-Formatter"

[workspace.dependencies]
# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# WASM bindings
wasm-bindgen = "0.2"

# Arena allocator (L-01 mitigation)
bumpalo     = { version = "3", features = ["collections"] }

# Unicode display-width (L-14 mitigation)
unicode-width = "0.1"

# Tree-sitter parsing infrastructure
tree-sitter = "0.22"

# ── Existing language grammars ───────────────────────────────────────────────
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python     = "0.21"
tree-sitter-rust       = "0.21"
tree-sitter-go         = "0.21"
tree-sitter-css        = "0.21"
tree-sitter-html       = "0.20.4"

# ── New language grammars (v0.2.0) ──────────────────────────────────────────
# Systems / C family
tree-sitter-c          = "0.21"
tree-sitter-cpp        = "0.22"
# JVM / .NET
tree-sitter-java       = "0.21"
tree-sitter-kotlin     = "0.3"
tree-sitter-scala      = "0.21"
tree-sitter-c-sharp    = "0.21"
# Scripting
tree-sitter-ruby       = "0.21"
tree-sitter-php        = "0.22"
tree-sitter-lua        = "0.1"
# Shell
tree-sitter-bash       = "0.21"
# Mobile
tree-sitter-swift      = "0.5"
tree-sitter-dart       = "0.0.3"
# Data & Config
tree-sitter-json       = "0.21"
tree-sitter-yaml       = "0.6"
tree-sitter-toml       = "0.6"
tree-sitter-xml        = "0.6"
# Docs
tree-sitter-md         = "0.2"
# Query
tree-sitter-sql        = "0.2"
tree-sitter-graphql    = "0.4"
# Functional / FP
tree-sitter-haskell    = "0.21"
tree-sitter-elixir     = "0.2"
tree-sitter-erlang     = "0.4"
tree-sitter-ocaml      = "0.21"
tree-sitter-julia      = "0.21"
tree-sitter-r          = "0.1"
# Modern Systems
tree-sitter-zig        = "0.0.2"
# Blockchain
tree-sitter-solidity   = "1.2"
# DevOps
tree-sitter-dockerfile = "0.2"
# Logging
log         = "0.4"

# TOML parsing (pyproject.toml, rustfmt.toml, Cargo.toml config)
toml        = { version = "0.8", features = ["parse"] }

[profile.release]
# Optimize for size — critical for WASM binary targets
opt-level   = "s"
lto         = true
codegen-units = 1

[profile.dev]
# Faster incremental builds during development
opt-level   = 0
debug       = true


