[package]
name        = "omnifmt-cli"
description = "omnifmt-cli — command-line interface for OmniFormatter"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[[bin]]
name = "omnifmt"
path = "src/main.rs"

[dependencies]
protocol    = { path = "../crates/protocol" }
serde       = { workspace = true }
serde_json  = { workspace = true }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Colored terminal output
termcolor = "1"

# Human-readable file sizes
bytesize = "1"

# Recursive glob expansion for `omnifmt format **/*.ts`
glob = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
