[package]
name        = "omnifmt-cli"
description = "omnifmt-cli — command-line interface for OmniFormatter"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[[bin]]
name = "omnifmt"
path = "src/main.rs"

[dependencies]
# CLI argument [dependencies]
clap = { version = "4.5", features = ["derive"] }
wasmtime = "18.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
protocol = { path = "../crates/protocol" }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

# Colored terminal output
termcolor = "1"

# Human-readable file sizes
bytesize = "1"

# Recursive glob expansion for `omnifmt format **/*.ts`
glob = "0.3"
walkdir = "2.5.0"
ignore = "0.4.22"
dirs = "6.0.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

# session:00a46b5f
