[package]
name        = "core"
description = "OmniFormatter WASM core binary — format dispatcher, zone detector, comment anchoring, diff generator"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

# Compile as a C-compatible dynamic library for WASM (required by wasm-bindgen)
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
protocol     = { path = "../protocol" }
lang-js      = { path = "../lang-js" }
lang-python  = { path = "../lang-python" }
lang-rust    = { path = "../lang-rust" }
lang-go      = { path = "../lang-go" }
lang-css     = { path = "../lang-css" }
serde        = { workspace = true }
serde_json   = { workspace = true }
wasm-bindgen = { workspace = true }
bumpalo      = { workspace = true }
unicode-width = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-html = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-css = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
# Enable debug double-format idempotency check (L-09 mitigation)
# Disabled in release builds for performance
debug = []

[build-dependencies]
cc = "1.0"
