[package]
name        = "lang-c"
description = "OmniFormatter: C / C++ / Objective-C / Objective-C++ language module"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
standalone = []

[dependencies]
protocol     = { path = "../protocol" }
serde.workspace      = true
serde_json.workspace = true
wasm-bindgen.workspace = true
log.workspace        = true
tree-sitter.workspace = true
tree-sitter-c.workspace   = true
tree-sitter-cpp.workspace = true
