[package]
name        = "lang-functional"
description = "OmniFormatter: Haskell / Elixir / Erlang / OCaml / Clojure / R / Julia language module"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
standalone = []

[dependencies]
protocol     = { path = "../protocol" }
serde.workspace      = true
serde_json.workspace = true
wasm-bindgen.workspace = true
log.workspace        = true
tree-sitter.workspace = true
tree-sitter-haskell.workspace = true
tree-sitter-elixir.workspace = true
tree-sitter-erlang.workspace = true
tree-sitter-ocaml.workspace = true
tree-sitter-julia.workspace = true
tree-sitter-r.workspace = true
