[package]
name        = "lang-go"
description = "OmniFormatter Go language module — gofmt/goimports output parity"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
protocol      = { path = "../protocol" }
serde         = { workspace = true }
serde_json    = { workspace = true }
wasm-bindgen  = { workspace = true }
tree-sitter   = { workspace = true }
tree-sitter-go= { workspace = true }
log           = { workspace = true }
