[package]
name        = "lang-js"
description = "OmniFormatter JS/TS/JSX/TSX language module — Prettier 3.x output parity"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
protocol               = { path = "../protocol" }
serde                  = { workspace = true }
serde_json             = { workspace = true }
wasm-bindgen           = { workspace = true }
unicode-width          = { workspace = true }
tree-sitter            = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
log                    = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
