[package]
name        = "lang-modern"
description = "OmniFormatter: Zig / Nim / D language module"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
standalone = []

[dependencies]
protocol     = { path = "../protocol" }
serde.workspace      = true
serde_json.workspace = true
wasm-bindgen.workspace = true
log.workspace        = true
tree-sitter.workspace = true
tree-sitter-zig.workspace = true
