[package]
name        = "lang-python"
description = "OmniFormatter Python language module — Black 24.x output parity"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
protocol          = { path = "../protocol" }
serde             = { workspace = true }
serde_json        = { workspace = true }
wasm-bindgen      = { workspace = true }
unicode-width     = { workspace = true }
tree-sitter       = { workspace = true }
tree-sitter-python= { workspace = true }
log               = { workspace = true }
toml              = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
