[package]
name        = "lang-rust"
description = "OmniFormatter Rust language module — rustfmt stable output parity"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
protocol      = { path = "../protocol" }
serde         = { workspace = true }
serde_json    = { workspace = true }
wasm-bindgen  = { workspace = true }
unicode-width = { workspace = true }
