[package]
name        = "lang-template"
description = "OmniFormatter: Jinja / Liquid / EJS / Handlebars / Twig template language stubs"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
standalone = []

[dependencies]
protocol         = { path = "../protocol" }
serde.workspace      = true
serde_json.workspace = true
wasm-bindgen.workspace = true
log.workspace        = true