[package]
name = "scss_dump"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scss_dump"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.22.6"
tree-sitter-css = { workspace = true }
core = { path = "../../crates/core" }
lang_css = { path = "../../crates/lang-css", package = "lang-css" }
protocol = { path = "../../crates/protocol" }


